--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chokidar": "^4.0.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.2",
     "multer": "^2.0.2",
     "natural": "^8.1.0",
