--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "chokidar": "^4.0.3",
+    "csurf": "^1.11.0",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
+    "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.2",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
     "multer": "^2.0.2",
+    "mysql2": "^3.15.2",
     "natural": "^8.1.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
