--- a/package.json
+++ b/package.json
@@ -3,7 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "make-admin": "node scripts/make-admin.js",
+    "create-admin": "node scripts/create-admin.js",
+    "migrate-fs": "node scripts/migrate-fs-to-db.js",
+    "css:build": "tailwindcss -c tailwind.config.js -i ./src/tailwind.css -o ./public/css/tailwind.css --minify",
+    "css:watch": "tailwindcss -c tailwind.config.js -i ./src/tailwind.css -o ./public/css/tailwind.css --watch"
+  },
+  "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   },
   "keywords": [],
   "author": "",
@@ -23,9 +36,10 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "multer": "^2.0.2",
-    "mysql2": "^3.15.2",
     "natural": "^8.1.0",
+    "nodemon": "^3.1.10",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sqlite3": "^5.1.7"
   }
 }
