--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "make-admin": "node scripts/make-admin.js",
     "create-admin": "node scripts/create-admin.js",
     "migrate-fs": "node scripts/migrate-fs-to-db.js",
+    "convert-covers": "node scripts/convert-covers.js",
     "css:build": "tailwindcss -c tailwind.config.js -i ./src/tailwind.css -o ./public/css/tailwind.css --minify",
     "css:watch": "tailwindcss -c tailwind.config.js -i ./src/tailwind.css -o ./public/css/tailwind.css --watch"
   },
@@ -16,7 +17,8 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "sharp": "^0.33.2"
   },
   "keywords": [],
   "author": "",
