feat(home): restore card layout, add latest chapters, fix badges; add site icon pipeline
Homepage cards: cover → title → latest 2 chapter links; border + shadow card UI
Badges NEW/HOT/18+ reliably overlay on cover (z-10)
Add utils to fetch latest chapters; wire to home route
Move site_logo.webp to public/favicon/; generate favicon-32 and apple-touch icons
Link webp/png icons in layout head

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "make-admin": "node scripts/make-admin.js",
     "create-admin": "node scripts/create-admin.js",
     "migrate-fs": "node scripts/migrate-fs-to-db.js",
+    "make-favicon": "node scripts/make-favicon.js",
     "convert-covers": "node scripts/convert-covers.js",
     "css:build": "tailwindcss -c tailwind.config.js -i ./src/tailwind.css -o ./public/css/tailwind.css --minify",
     "css:watch": "tailwindcss -c tailwind.config.js -i ./src/tailwind.css -o ./public/css/tailwind.css --watch"
