chore(ignores): expand .gitignore for logs, editors, and avatar uploads docs(readme): document recent features, security, scripts, and schema changes feat(home): add “Recently Updated” section (max 5) with timestamps fix(home): make each manga a true card container; cover/title/chapter links inside perf(images): lazy‑load covers/avatars/chapters; async decode feat(security): add Helmet CSP, referrer policy, secure cookies, gzip compression feat(upload): enforce image‑only uploads with size limits (cover 5MB, chapter 10MB, avatar 2MB) feat(ux): block right‑click/drag on images to discourage saving

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@ node_modules/
 manga/
 .env
 database.sqlite
+logs/
+npm-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.DS_Store
+Thumbs.db
+.vscode/
+
+# User uploads (keep default placeholder)
+public/avatars/*
+!public/avatars/default.svg
