--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "csurf": "^1.11.0",
+    "compression": "^1.7.4",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
