--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
+    "unzipper": "^0.10.14",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
